--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -106,6 +106,7 @@
         android:text="Current temperature:"
         android:textColor="#020202"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.124"
@@ -124,6 +125,7 @@
         android:text="Current humidity:"
         android:textColor="#070707"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.113"
@@ -132,7 +134,7 @@
         app:layout_constraintVertical_bias="0.281" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/curr_temp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
@@ -150,7 +152,7 @@
         app:layout_constraintVertical_bias="0.241" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/curr_humidity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
@@ -174,6 +176,7 @@
         android:text="Modes of operation"
         android:textColor="#000000"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -193,7 +196,7 @@
         app:layout_constraintVertical_bias="0.012" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/charge_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="charge"
@@ -203,5 +206,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.012" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="205dp"
+        android:layout_height="40dp"
+        android:onClick="launchPowerPage"
+        android:text="Power"
+        app:layout_constraintBottom_toBottomOf="@+id/button15"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.774" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
